# doubango

./: CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
bindings/: CMakeLists.txt
bindings/_common/: ChallengeCallback.cxx  ChallengeCallback.h  SipChallenge.cxx  SipChallenge.h  SipMessageCallback.cxx  SipMessageCallback.h  SipStack.cxx  SipStack.h  SipStack.i  tinyWRAP.i  tinyWRAP_config.h
cmake/: GetOpenCORE-AMR.cmake
tinyHTTP/: CMakeLists.txt
tinyHTTP/include/tinyhttp/auth/: thttp_auth.h
tinyHTTP/src/auth/: thttp_auth.c
tinyMEDIA/: CMakeLists.txt
tinyNET/: CMakeLists.txt
tinySAK/: CMakeLists.txt
tinySDP/: CMakeLists.txt
tinySIP/include/tinysip/authentication/: tsip_challenge.h
tinySIP/include/tinysip/transports/: tsip_transport.h
tinySIP/src/authentication/: tsip_challenge.c
tinySIP/src/transports/: tsip_transport.c
